--- a/lava-shader.html
+++ b/lava-shader.html
@@ -71,6 +71,13 @@
             padding: 15px;
             color: #fff;
             z-index: 100;
+            transition: transform 0.3s ease, opacity 0.3s ease;
+        }
+
+        /* Add CSS for panel toggle states */
+        .panel.hidden {
+            transform: translateX(110%);
+            opacity: 0;
         }
 
         #controls-panel {
@@ -201,6 +208,43 @@
         .mode-button:hover {
             background-color: #555;
         }
+
+        /* Styles for toggle buttons */
+        .toggle-panel-btn {
+            position: absolute;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #ff6600;
+            border: none;
+            border-radius: 4px;
+            padding: 8px 12px;
+            cursor: pointer;
+            font-size: 14px;
+            z-index: 101;
+            transition: background-color 0.2s;
+        }
+
+        .toggle-panel-btn:hover {
+            background-color: rgba(50, 50, 50, 0.7);
+        }
+
+        #toggle-controls-panel {
+            top: 20px;
+            right: 280px;
+        }
+
+        #toggle-info-panel {
+            bottom: 20px;
+            right: 280px;
+        }
+
+        /* Hidden toggle buttons when panels are hidden */
+        #toggle-controls-panel.panel-hidden {
+            right: 20px;
+        }
+
+        #toggle-info-panel.panel-hidden {
+            right: 20px;
+        }
     </style>
 </head>
 <body>
@@ -215,6 +259,10 @@
         <h1 id="title">Lava Shader</h1>
         <p id="subtitle">Interactive Three.js shader demo</p>
     </div>
+
+    <!-- Toggle Buttons -->
+    <button id="toggle-controls-panel" class="toggle-panel-btn">Hide Controls</button>
+    <button id="toggle-info-panel" class="toggle-panel-btn">Hide Info</button>
 
     <!-- Controls Panel -->
     <div id="controls-panel" class="panel">
@@ -322,6 +370,7 @@
         <p><kbd>T</kbd> - Cycle through themes</p>
         <p><kbd>4-0</kbd> - Select specific themes</p>
         <p><kbd>R</kbd> - Reset camera</p>
+        <p><kbd>H</kbd> - Toggle panels visibility</p>
     </div>
 
     <!-- Import maps for modules -->
